<?xml version="1.0"?>
<package format="3">
  <name>my_turtle_package</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="your_email@domain.com">your_name</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>turtlesim</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
